# trace-tests

./: .gitignore  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRIVACY.md  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt  sitemap.xml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  contributor-check.yml  docs.yml  release.yml  require-maintainer-approval.yml  scorecard.yml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
docs/: error-codes.md  levels.md  modules.md  quickstart.md
docs/error-codes/: index.html
docs/levels/: index.html
docs/modules/: index.html  tr-anc.md  tr-env.md  tr-pol.md  tr-rte.md  tr-sca.md  tr-sig.md  tr-txn.md
docs/modules/tr-anc/: index.html
docs/modules/tr-env/: index.html
docs/modules/tr-pol/: index.html
docs/modules/tr-rte/: index.html
docs/modules/tr-sca/: index.html
docs/modules/tr-sig/: index.html
docs/modules/tr-txn/: index.html
docs/quickstart/: index.html
docs/stylesheets/: extra.css
docs/tutorials/: ci-integration.md  writing-conformance-tests.md
docs/tutorials/ci-integration/: index.html
docs/tutorials/writing-conformance-tests/: index.html
schemas/: trace-claim.json
search/: search_index.json
src/trace_tests/: __init__.py  cli.py  loader.py  result.py  runner.py
src/trace_tests/modules/: __init__.py  tr_anc.py  tr_env.py  tr_pol.py  tr_rte.py  tr_sca.py  tr_sig.py  tr_txn.py
tests/: conftest.py  test_level0.py  test_level0_negative.py  test_level1.py  test_level2.py  test_schema.py  test_software_only_platform.py
tests/unit/: test_cli.py  test_loader.py  test_runner.py  test_tr_anc.py  test_tr_env.py  test_tr_pol.py  test_tr_rte.py  test_tr_sig.py
tests/vectors/: invalid_missing_runtime.json  invalid_wrong_profile.json  valid_cmcp_runtime.json  valid_level0.json  valid_level0_with_transcript.json
